// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With \`full-project\` initialized on server Completion request returns all angle-bracket in a element expression 1`] = `
Array [
  Object {
    "detail": "component",
    "kind": 7,
    "label": "AnotherAwesomeComponent",
    "textEdit": Object {
      "newText": "AnotherAwesomeComponent",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 1,
          "line": 1,
        },
      },
    },
  },
  Object {
    "detail": "component",
    "kind": 7,
    "label": "MyAwesomeComponent",
    "textEdit": Object {
      "newText": "MyAwesomeComponent",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 1,
          "line": 1,
        },
      },
    },
  },
  Object {
    "detail": "component",
    "kind": 7,
    "label": "Bar",
    "textEdit": Object {
      "newText": "Bar",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 1,
          "line": 1,
        },
      },
    },
  },
]
`;

exports[`With \`full-project\` initialized on server Completion request returns all angle-bracket in a element expression for in repo addons without batman syntax 1`] = `
Array [
  Object {
    "detail": "component",
    "kind": 7,
    "label": "Bar",
    "textEdit": Object {
      "newText": "Bar",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 1,
          "line": 1,
        },
      },
    },
  },
]
`;

exports[`With \`full-project\` initialized on server Completion request returns all components and helpers when requesting completion items in a handlebars expression 1`] = `
Array [
  Object {
    "detail": "component",
    "kind": 7,
    "label": "another-awesome-component",
    "textEdit": Object {
      "newText": "another-awesome-component",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
  },
  Object {
    "detail": "component",
    "kind": 7,
    "label": "my-awesome-component",
    "textEdit": Object {
      "newText": "my-awesome-component",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
  },
  Object {
    "detail": "component",
    "kind": 7,
    "label": "nested/nested-component",
    "textEdit": Object {
      "newText": "nested/nested-component",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
  },
  Object {
    "detail": "helper",
    "kind": 3,
    "label": "some-helper",
    "textEdit": Object {
      "newText": "some-helper",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
  },
  Object {
    "detail": "component",
    "kind": 7,
    "label": "bar",
    "textEdit": Object {
      "newText": "bar",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "action",
    "textEdit": Object {
      "newText": "action",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "MustachePath",
      "SubExpressionPath",
    ],
  },
  Object {
    "detail": "Ember 1.11.0",
    "kind": 3,
    "label": "component",
    "textEdit": Object {
      "newText": "component",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "BlockPath",
      "MustachePath",
      "SubExpressionPath",
    ],
    "version": "1.11.0",
  },
  Object {
    "detail": "Ember 1.13.0",
    "kind": 3,
    "label": "concat",
    "textEdit": Object {
      "newText": "concat",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "MustachePath",
      "SubExpressionPath",
    ],
    "version": "1.13.0",
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "debugger",
    "textEdit": Object {
      "newText": "debugger",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember 2.1.0",
    "kind": 3,
    "label": "get",
    "textEdit": Object {
      "newText": "get",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "MustachePath",
      "SubExpressionPath",
    ],
    "version": "2.1.0",
  },
  Object {
    "detail": "Ember 3.12.0",
    "kind": 3,
    "label": "fn",
    "textEdit": Object {
      "newText": "fn",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "MustachePath",
      "SubExpressionPath",
    ],
    "version": "3.12.0",
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "if",
    "textEdit": Object {
      "newText": "if",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "BlockPath",
      "MustachePath",
      "SubExpressionPath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 7,
    "label": "input",
    "textEdit": Object {
      "newText": "input",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 7,
    "label": "link-to",
    "textEdit": Object {
      "newText": "link-to",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "loc",
    "textEdit": Object {
      "newText": "loc",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "MustachePath",
      "SubExpressionPath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "log",
    "textEdit": Object {
      "newText": "log",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "mount",
    "textEdit": Object {
      "newText": "mount",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "outlet",
    "textEdit": Object {
      "newText": "outlet",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "yield",
    "textEdit": Object {
      "newText": "yield",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "else",
    "textEdit": Object {
      "newText": "else",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "render",
    "textEdit": Object {
      "newText": "render",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 7,
    "label": "textarea",
    "textEdit": Object {
      "newText": "textarea",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "unbound",
    "textEdit": Object {
      "newText": "unbound",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "MustachePath",
      "SubExpressionPath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "unless",
    "textEdit": Object {
      "newText": "unless",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
    },
    "usableIn": Array [
      "BlockPath",
      "MustachePath",
      "SubExpressionPath",
    ],
  },
]
`;

exports[`With \`full-project\` initialized on server Completion request returns all routes when requesting completion items in a block link-to 1`] = `
Array [
  Object {
    "detail": "route",
    "kind": 17,
    "label": "angle-completion",
    "textEdit": Object {
      "newText": "angle-completion",
      "range": Object {
        "end": Object {
          "character": 12,
          "line": 3,
        },
        "start": Object {
          "character": 12,
          "line": 3,
        },
      },
    },
  },
  Object {
    "detail": "route",
    "kind": 17,
    "label": "application",
    "textEdit": Object {
      "newText": "application",
      "range": Object {
        "end": Object {
          "character": 12,
          "line": 3,
        },
        "start": Object {
          "character": 12,
          "line": 3,
        },
      },
    },
  },
  Object {
    "detail": "route",
    "kind": 17,
    "label": "definition",
    "textEdit": Object {
      "newText": "definition",
      "range": Object {
        "end": Object {
          "character": 12,
          "line": 3,
        },
        "start": Object {
          "character": 12,
          "line": 3,
        },
      },
    },
  },
  Object {
    "detail": "route",
    "kind": 17,
    "label": "inrepo-addon-completion",
    "textEdit": Object {
      "newText": "inrepo-addon-completion",
      "range": Object {
        "end": Object {
          "character": 12,
          "line": 3,
        },
        "start": Object {
          "character": 12,
          "line": 3,
        },
      },
    },
  },
  Object {
    "detail": "route",
    "kind": 17,
    "label": "test-route",
    "textEdit": Object {
      "newText": "test-route",
      "range": Object {
        "end": Object {
          "character": 12,
          "line": 3,
        },
        "start": Object {
          "character": 12,
          "line": 3,
        },
      },
    },
  },
  Object {
    "detail": "route",
    "kind": 17,
    "label": "nested.nested-route",
    "textEdit": Object {
      "newText": "nested.nested-route",
      "range": Object {
        "end": Object {
          "character": 12,
          "line": 3,
        },
        "start": Object {
          "character": 12,
          "line": 3,
        },
      },
    },
  },
]
`;

exports[`With \`full-project\` initialized on server Completion request returns all routes when requesting completion items in an inline link-to 1`] = `
Array [
  Object {
    "detail": "route",
    "kind": 17,
    "label": "angle-completion",
    "textEdit": Object {
      "newText": "angle-completion",
      "range": Object {
        "end": Object {
          "character": 23,
          "line": 2,
        },
        "start": Object {
          "character": 23,
          "line": 2,
        },
      },
    },
  },
  Object {
    "detail": "route",
    "kind": 17,
    "label": "application",
    "textEdit": Object {
      "newText": "application",
      "range": Object {
        "end": Object {
          "character": 23,
          "line": 2,
        },
        "start": Object {
          "character": 23,
          "line": 2,
        },
      },
    },
  },
  Object {
    "detail": "route",
    "kind": 17,
    "label": "definition",
    "textEdit": Object {
      "newText": "definition",
      "range": Object {
        "end": Object {
          "character": 23,
          "line": 2,
        },
        "start": Object {
          "character": 23,
          "line": 2,
        },
      },
    },
  },
  Object {
    "detail": "route",
    "kind": 17,
    "label": "inrepo-addon-completion",
    "textEdit": Object {
      "newText": "inrepo-addon-completion",
      "range": Object {
        "end": Object {
          "character": 23,
          "line": 2,
        },
        "start": Object {
          "character": 23,
          "line": 2,
        },
      },
    },
  },
  Object {
    "detail": "route",
    "kind": 17,
    "label": "test-route",
    "textEdit": Object {
      "newText": "test-route",
      "range": Object {
        "end": Object {
          "character": 23,
          "line": 2,
        },
        "start": Object {
          "character": 23,
          "line": 2,
        },
      },
    },
  },
  Object {
    "detail": "route",
    "kind": 17,
    "label": "nested.nested-route",
    "textEdit": Object {
      "newText": "nested.nested-route",
      "range": Object {
        "end": Object {
          "character": 23,
          "line": 2,
        },
        "start": Object {
          "character": 23,
          "line": 2,
        },
      },
    },
  },
]
`;

exports[`With \`full-project\` initialized on server Definition request returns the definition information for a belongsTo relationship 1`] = `
Array [
  Object {
    "range": Object {
      "end": Object {
        "character": 0,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "uri": "/app/models/model-a.js",
  },
]
`;

exports[`With \`full-project\` initialized on server Definition request returns the definition information for a component in a template 1`] = `
Array [
  Object {
    "range": Object {
      "end": Object {
        "character": 0,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "uri": "/app/components/my-awesome-component.js",
  },
]
`;

exports[`With \`full-project\` initialized on server Definition request returns the definition information for a hasMany relationship 1`] = `
Array [
  Object {
    "range": Object {
      "end": Object {
        "character": 0,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "uri": "/app/models/model-b.js",
  },
]
`;

exports[`With \`full-project\` initialized on server Definition request returns the definition information for a helper in a template 1`] = `
Array [
  Object {
    "range": Object {
      "end": Object {
        "character": 0,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "uri": "/app/helpers/some-helper.js",
  },
]
`;

exports[`With \`full-project\` initialized on server Definition request returns the definition information for a transform 1`] = `
Array [
  Object {
    "range": Object {
      "end": Object {
        "character": 0,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "uri": "/app/transforms/custom-transform.js",
  },
]
`;
